--- a/controller/templates/record.html
+++ b/controller/templates/record.html
@@ -8,9 +8,10 @@
     <title>Wanderpi</title>
 
     <!-- CSS only -->
-    <link href="../static/css/recording-screen-style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="../static/css/recording-screen-style.css" rel="stylesheet">
+    
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
@@ -30,6 +31,30 @@
 
 <body>
 
+<!-- Modal -->
+<div class="modal fade" id="saveWanderpiModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Save Wanderpi</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="recipient-name" class="col-form-label">Name:</label>
+              <input type="text" class="form-control" id="recipient-name">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button id="save_request_button" type="button" class="btn btn-primary">Save <i class="bi bi-save"></i></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <!-- style="background-color: #B6E4FF;" -->
 
 <!-- Image and text -->
@@ -40,6 +65,11 @@
             <img src="{{url_for('static', filename='wanderpi-icon.svg')}}" width="60" height="60" class="d-inline-block align-top" alt="">
         </a>
         <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
+        
+        <li class="nav-item">
+            <select id="videoSource"></select>
+        </li>
+
         <li class="nav-item" id="recording_status_container">
             <span id="recording_status" class="badge">
                 Camera loaded 
@@ -56,7 +86,7 @@
       <div class="col-md d-flex align-items-stretch">
         <div class="card">
             <div class="card-body" >
-                <img class="camera-view-responsive card-img-top" id="video" src="{{ url_for('home.video_viewer') }}">
+                <img class="camera-view-responsive card-img-top" id="video" src="{{ url_for('home.video_feed', camera_id=0) }}">
                 
                 <div class="container">
                     <div class="gap-2 mx-auto">
@@ -64,10 +94,8 @@
                         <button id="stop" type="button" class="btn btn-outline-danger btn-block btn-responsive ">Stop Recording <i class="bi bi-stop-fill"></i></button>
                         <!-- <button type="button" value="Log-out"  onclick="javascript:window.location.href='{{ url_for('user.logout') }}'" class="btn btn-secondary">Log out</button> -->
                         <button id="download_video" type="button"  class="btn btn-outline-secondary btn-block btn-responsive">Download Wanderpi <i class="bi bi-file-arrow-down-fill"></i></button>                   
-                        
-                        
                     </div>
-                    <button id="save_video" type="button"  class="btn btn-outline-success btn-block">Save Wanderpi <i class="bi bi-save"></i></button>
+                    <button id="save_video"  type="button" class="btn btn-outline-success btn-block" data-bs-toggle="modal" data-bs-target="#saveWanderpiModal">Save Wanderpi <i class="bi bi-save"></i></button>
                 </div> 
             </div>
         </div>
@@ -95,6 +123,7 @@
         <script type="text/javascript" src="{{ url_for('static', filename='recorder.js') }}"></script>
     </div>
 </div>
+
 
 </body>
 </html>
