--- a/controller/templates/index.html
+++ b/controller/templates/index.html
@@ -6,25 +6,120 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wanderpi</title>
-    <style>
-        body {
-            background-color: #484856;
-        }
 
-    </style>
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="../static/css/index.css" rel="stylesheet">
+    
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script src="../static/js/index.js"></script>
+    
+    
+    <add name="Access-Control-Allow-Headers" value="*" />
 </head>
+
 <body>
-<h1 align="center" style="color: whitesmoke;">Video streaming live</h1>
-<div class="top">
-    <div class="recorder" id="recorder" align="center">
-        <button id="record" class="btn">Record Wanderpi</button>
-        <button id="stop" class="btn">Stop Recording</button>
-        <input type="button" class="btn" value="Log-out"
-               onclick="javascrtpt:window.location.href='{{ url_for('user.logout') }}'">
-        <a id="download"></a>
-        <script type="text/javascript" src="{{ url_for('static', filename='recorder.js') }}"></script>
+
+
+
+<!-- style="background-color: #B6E4FF;" -->
+
+<!-- Image and text -->
+
+
+
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light" style="background-color: #B6E4FF;">
+    <div class="container-fluid">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="/">
+                <img src="{{url_for('static', filename='wanderpi-icon.svg')}}" width="60" height="60" class="d-inline-block align-top" alt="">
+            </a>
+            
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <button id="new_wanderpi" type="button" onclick="window.location.href='/record'" class="btn btn-outline-primary btn-block btn-responsive">Record a new Wanderpi <i class="bi bi-plus-square"></i></button>
+                </li>
+            <ul>
+
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div> 
+    </div>    
+</nav>
+
+
+<div class="py-4">
+    <div class="container-fluid">
+        <!-- <div class="row hidden-md-up"> -->
+            {% block content %}
+                {% if wanderpis|length > 0 %}     
+                <div class="row">
+                    {% for post in wanderpis %}
+                        <div class="col-sm-12 col-md-4 col-lg-3 pb-4"> 
+                            <div class="card h-100">
+                                   
+                                <div class="card-body">
+                                    <a href="{{ post.id }}"> <img class="camera-view-responsive card-img-top" src="/static/thumbnails/{{ post.thumbnail_url }}"></img></a>
+                                 
+                                    <h5 class="card-title" href="{{ post.id }}"> {{ post.name }} </h5>
+                                    
+                                    <div class="card-footer text-center bg-transparent border-light" role="group" aria-label="Basic example">
+                                        <button id="download_video" type="button" onclick="window.location.href='/uploads/{{ post.id }}.mp4'" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-file-arrow-down-fill"></i></button>
+                                        <button id="share_video" type="button"  onclick="shareVideo({{ post.id }})" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-share"></i></button>
+                                        <button id="delete_video" type="button"  onclick="window.location.href='/delete_video/{{ post.id }}'" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-trash"></i></button>
+                                    </div>
+                                </div>
+                            </div>    
+                        </div>
+                    {% endfor %}
+                    
+                    <div class="col-sm-12 col-md-4 col-lg-3 pb-4"> 
+                        <div class="card h-100">
+                               
+                            <div class="card-body">
+                                <a onclick="window.location.href='/record'"> <img class="camera-view-responsive mx-auto d-block card-img-top" width="200" height="200" src="/static/images/add-more-icon.svg"></img></a>
+                                <h5 class="card-title text-center"> New Wanderpi </h5>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+                {% else %}
+                    <!-- <div class="col-md d-flex align-items-stretch">
+                        <div class="card mx-auto border-dark  mb-3" style="max-width: 18rem;">
+                            <div class="card-header mx-auto bg-transparent border-dark">No wanderpis available</div>
+                            <img class="card-img-top mx-auto" style="width: 300px;" id="video" src="{{ url_for('static', filename='no_videos_icon.png') }}">
+                            
+                            <div class="mx-auto card-footer bg-transparent border-dark"><button id="new_wanderpi" type="button" onclick="window.location.href='/record'" class="btn btn-outline-secondary btn-block btn-responsive">Record a new Wanderpi <i class="bi bi-file-arrow-down-fill"></i></button>                   
+                        </div>
+                    </div> -->
+                    <div class="col-md d-flex"> 
+                        <div class="card mx-auto h-100">
+                               
+                            <div class="card-body">
+                                <a onclick="window.location.href='/record'"> <img class="camera-view-responsive mx-auto d-block card-img-top" width="200" height="200" src="/static/images/add-more-icon.svg"></img></a>
+                                <h5 class="card-title text-center"> New Wanderpi </h5>
+                            </div>
+                        </div>    
+                    </div>
+                {% endif %} 
+            {% endblock %}    
+        <!-- </div> -->
     </div>
 </div>
-<img id="video" src="{{ url_for('home.video_viewer') }}">
+
+
+
 </body>
 </html>
