--- a/controller/static/css/recording-screen-style.css
+++ b/controller/static/css/recording-screen-style.css
@@ -5,7 +5,7 @@
 }
 
   
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .btn-responsive {
       padding:2px 4px;
       font-size:80%;
@@ -21,7 +21,7 @@
       line-height: 1.2;
     }
   }
-  
+   */
   
 
 .map-responsive{
