--- a/controller/templates/record.html
+++ b/controller/templates/record.html
@@ -59,64 +59,59 @@
 
 <!-- Image and text -->
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-            <img src="{{url_for('static', filename='wanderpi-icon.svg')}}" width="60" height="60" class="d-inline-block align-top" alt="">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light" style="background-color: #B6E4FF;">
+  <div class="container">
+        <a class="navbar-brand mt-2 mt-lg-0" href="/">
+            <img src="{{url_for('static', filename='wanderpi-icon.svg')}}" height="35" class="d-inline-block align-top" alt="">
         </a>
+        <h1 class=" mt-2 mt-lg-0">{{ travel.name }}</h1>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <select id="videoSource"></select>
-            </li>
+        <div class="d-flex align-items-center">       
             
-            <li class="nav-item" id="recording_status_container">
-              <span id="recording_status" class="badge">
+            <div id="recording_status_container">
+              <span id="recording_status" class="badge mr-1">
                   Camera loaded 
               </span>
-            </li>
-          </ul>
+            </div>
 
-          <button id="save_video"  type="button" class="navbar-btn btn btn-outline-success btn-block" data-bs-toggle="modal" data-bs-target="#saveWanderpiModal">Save Wanderpi <i class="bi bi-save"></i></button>
+            <button id="save_video"  type="button" class="navbar-btn btn btn-outline-success mr-3" data-bs-toggle="modal" data-bs-target="#saveWanderpiModal" data-bs-whatever="{{ travel.id }}" >Save Wanderpi <i class="bi bi-save"></i></button>
         </div>
-    </div>    
+  </div>    
 </nav>
 
 <div class="py-4">
 <div class="container">
     <div class="row hidden-md-up">
       <div class="col-md d-flex align-items-stretch">
-        <div class="card">
+        <div class="card h-100">
             <div class="card-body" >
                 <img class="camera-view-responsive card-img-top" id="video" src="{{ url_for('home.video_feed', camera_id=0) }}">
                 
+                <div class="gap-2 mx-auto pb-4"> 
+                  <select class="form-select" id="videoSource"></select>
+                </div> 
+
                 <div class="container">
-                    <div class="gap-2 mx-auto">
+                    <div class="gap-2 mx-auto btn-group">
                         <button id="record" type="button" class="btn  btn-outline-info btn-block  btn-responsive ">Record Wanderpi <i class="bi bi-record2"></i></button>
                         <button id="stop" type="button" class="btn btn-outline-danger btn-block btn-responsive ">Stop Recording <i class="bi bi-stop-fill"></i></button>
-                        <!-- <button type="button" value="Log-out"  onclick="javascript:window.location.href='{{ url_for('user.logout') }}'" class="btn btn-secondary">Log out</button> -->
                         <button id="download_video" type="button"  class="btn btn-outline-secondary btn-block btn-responsive">Download Wanderpi <i class="bi bi-file-arrow-down-fill"></i></button>                   
                     </div>
-                   
                 </div> 
+                
             </div>
         </div>
       </div>
+      
       <div class="col-md">
-        <div class="card">
+        <div class="card h-100">
             <div class="card-body">
                 <div id="map-container-google-1" class="z-depth-1-half map-responsive" style="height: 500px">
-                    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11901.749542382111!2d1.8415882000000003!3d41.77578655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1626793033074!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
+                    
                 </div>
                 <a id="gps_text" > </a>
             </div>
         </div>
-        
       </div>
     </div>
 </div>
