--- a/controller/static/css/index.css
+++ b/controller/static/css/index.css
@@ -12,7 +12,7 @@ body {
     width: 200px;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .btn-responsive {
         width: 30px;
         height: 30px;
@@ -24,5 +24,24 @@ body {
         width: 60px;
         height: 60px;
     }
+} */
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
 }
 
+#myBtn:hover {
+background-color: #555; /* Add a dark-grey background on hover */
+}
