--- a/controller/templates/travel_view.html
+++ b/controller/templates/travel_view.html
@@ -17,7 +17,7 @@
    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    <script src="../static/js/index.js"></script>
+    <!-- <script src="../static/js/index.js"></script> -->
     
     
     <add name="Access-Control-Allow-Headers" value="*" />
@@ -45,8 +45,8 @@
         <div class="d-flex align-items-center">
                 
                 
-                <button id="new_wanderpi" type="button" onclick="window.location.href='{{ url_for('home.record', travel_id='{{ travel.id }}') }}'" class="btn btn-primary me-3"><i class="bi bi-plus-square"></i></button>
-                <button id="global_map" type="button" onclick="window.location.href='{{ url_for('home.global_map', travel_id='{{ travel.id }}') }}'" class="btn btn-primary me-3"><i class="bi bi-map"></i></button>
+                <button id="new_wanderpi" type="button" onclick="window.location.href='{{ url_for('home.record', travel_id=travel.id) }}'" class="btn btn-primary me-3"><i class="bi bi-plus-square"></i></button>
+                <button id="global_map" type="button" onclick="window.location.href='{{ url_for('home.global_map', travel_id=travel.id) }}'" class="btn btn-primary me-3"><i class="bi bi-map"></i></button>
 
                 {% if wanderpis|length > 0 %} 
                     <form class="d-flex input-group w-auto">
@@ -89,6 +89,15 @@
                                  
                                     <h5 class="card-title" href="/video/{{ post.id }}"> {{ post.name }} </h5>
                                     
+                                    <div class="row mb-2">
+                                        <div class="col">
+                                            <i class="card-text pull-right bi bi-geo-alt"></i><span> {{ post.destination }}</span>
+                                        </div>
+                                    </div>
+                                    
+                                    <i class="card-text pull-right bi bi-calendar4-event"></i><span> {{ post.created_date }}</span>
+                                    
+
                                     <div class="card-footer text-center bg-transparent border-light" role="group" aria-label="Basic example">
                                         <button id="download_video" type="button" onclick="window.location.href='/uploads/{{ post.id }}.mp4'" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-file-arrow-down-fill"></i></button>
                                         <button id="share_video" type="button"  onclick="shareVideo({{ post.id }})" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-share"></i></button>
