--- a/controller/templates/record.html
+++ b/controller/templates/record.html
@@ -85,7 +85,7 @@
       <div class="col-md d-flex align-items-stretch">
         <div class="card h-100">
             <div class="card-body" >
-                <img class="camera-view-responsive card-img-top" id="video" src="{{ url_for('home.video_feed', camera_id=0) }}">
+                <img class="camera-view-responsive card-img-top" id="video" src="{{ url_for('record.video_feed', camera_id=0) }}">
                 
                 <div class="gap-2 mx-auto pb-4"> 
                   <select class="form-select" id="videoSource"></select>
