--- a/controller/templates/single-video-view.html
+++ b/controller/templates/single-video-view.html
@@ -75,13 +75,14 @@
         <div class="col-sm-12 col-md-6 col-lg-6 pb-4">
           <div class="card h-100">
               <div class="card-body" >
-                  <video class="player-overlay camera-view-responsive card-img-top" width="640" height="auto" controls>
-                      <source src="https://www.learningcontainer.com/wp-content/uploads/2020/05/sample-mp4-file.mp4" type="video/mp4">
+                {% block content %}  
+                <video class="player-overlay camera-view-responsive card-img-top" width="640" height="auto" controls>
+                      <source src="/static/videos/{{ video.id }}.mp4" type="video/mp4">
                   </video>
                   
-                  {% block content %}
+                 
                   <h5 class="card-title"> {{ video.name }} </h5>
-                  <a> {{ video.created_date }}</a>
+                  <a> {{ video.created_date }} {{  video.time_duration }} </a>
                   <div class="card-footer text-center bg-transparent border-light" role="group" aria-label="Basic example">
                       <button id="download_video" type="button" onclick="window.location.href='/uploads/{{ video.id }}.mp4'" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-file-arrow-down-fill"></i></button>
                       <button id="share_video" type="button"  class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-share"></i></button>
