--- a/controller/templates/record.html
+++ b/controller/templates/record.html
@@ -74,7 +74,7 @@
               </span>
             </div>
 
-            <button id="save_video"  type="button" class="navbar-btn btn btn-outline-success mr-3" data-bs-toggle="modal" data-bs-target="#saveWanderpiModal" data-bs-whatever="{{ travel.id }}" >Save Wanderpi <i class="bi bi-save"></i></button>
+            <button id="save_file"  type="button" class="navbar-btn btn btn-outline-success mr-3" data-bs-toggle="modal" data-bs-target="#saveWanderpiModal" data-bs-whatever="{{ travel.id }}" >Save Wanderpi <i class="bi bi-save"></i></button>
         </div>
   </div>    
 </nav>
