--- a/controller/templates/index.html
+++ b/controller/templates/index.html
@@ -28,7 +28,11 @@
     crossorigin=""></script>
 
     <script src="../static/dist/leaflet-realtime.js"></script>
+    
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"> </script>
 
+    
     <script src="../static/js/index.js"></script>
 
     <add name="Access-Control-Allow-Headers" value="*" />
@@ -39,7 +43,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="saveTravelModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="addTravelModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -88,7 +92,7 @@
 
         <div class="d-flex align-items-center">
                 
-                <button id="new_travel" type="button" data-bs-toggle="modal" data-bs-target="#saveTravelModal" class="btn btn-primary me-3"><i class="bi bi-plus-square"></i></button>
+                <button id="new_travel" type="button" data-bs-toggle="modal" data-bs-target="#addTravelModal" class="btn btn-primary me-3"><i class="bi bi-plus-square"></i></button>
                 
                 {% if travels|length > 0 %} 
                     <form class="d-flex input-group w-auto">
@@ -162,7 +166,7 @@
                         <div class="card h-100">
                                
                             <div class="card-body">
-                                <a data-bs-toggle="modal" data-bs-target="#saveTravelModal"> <img class="camera-view-responsive mx-auto d-block card-img-top" width="200" height="200" src="/static/images/add-more-icon.svg"></img></a>
+                                <a data-bs-toggle="modal" data-bs-target="#addTravelModal"> <img class="camera-view-responsive mx-auto d-block card-img-top" width="200" height="200" src="/static/images/add-more-icon.svg"></img></a>
                                 <h5 class="card-title text-center"> New Travel </h5>
                             </div>
                         </div>    
@@ -174,7 +178,7 @@
                         <div class="card mx-auto h-100">
                                
                             <div class="card-body">
-                                <a data-bs-toggle="modal" data-bs-target="#saveTravelModal"> <img class="camera-view-responsive mx-auto d-block card-img-top" width="200" height="200" src="/static/images/add-more-icon.svg"></img></a>
+                                <a data-bs-toggle="modal" data-bs-target="#addTravelModal"> <img class="camera-view-responsive mx-auto d-block card-img-top" width="200" height="200" src="/static/images/add-more-icon.svg"></img></a>
                                 <h5 class="card-title text-center"> New Travel </h5>
                             </div>
                         </div>    
@@ -191,7 +195,6 @@
     </div>
 </div>
 
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
 </body>
 </html>
