--- a/controller/templates/travel_view.html
+++ b/controller/templates/travel_view.html
@@ -10,15 +10,35 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../static/css/index.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
     
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
    
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    
+    <script> 
+        $(function(){
+            $("#dinamic-modal-body").load("/static/html-templates/download_modal.html"); 
+            //$("#context-menu").load("/static/html-templates/context_menu.html"); 
+        });
 
-    <add name="Access-Control-Allow-Headers" value="*" />
+        $(document).ready(function() { // this runs as soon as the page is ready (DOM is loaded)
+            const script = document.createElement('script');
+            script.src = '/static/js/file_handler.js';
+            document.head.appendChild(script);
+        });
+    </script> 
+
+    <!--Import SocketIO-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
+        
+
+    <link href="../static/css/travel-view.css" rel="stylesheet">
+    <script src="/static/js/page_utils.js"></script>
 </head>
 
 <body>
@@ -35,12 +55,16 @@
 
         <div class="d-flex align-items-center">
                 
-                <button id="new_wanderpi" type="button" onclick="window.location.href='{{ url_for('home.record', travel_id=travel.id) }}'" class="btn btn-primary me-3"><i class="bi bi-plus-square"></i></button>
-                
+                <!-- <button id="new_wanderpi" data-bs-toggle="tooltip" data-bs-placement="bottom" title="New Wanderpi" type="button" onclick="window.location.href='{{ url_for('home.record', travel_id=travel.id) }}'" class="btn btn-danger me-3"><i class="bi bi-plus-lg"></i></button>
+                 -->
+                <div id="header-buttons">
+                    {% with travel=travel , context=False %}
+                        {% include "travel_header_buttons.html" %}
+                    {% endwith %}
+                </div>
                 {% if wanderpis|length > 0 %} 
-                <button id="download_all_wanderpis" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" type="button"  class="btn btn-primary me-3"><i class="bi bi-file-earmark-arrow-down"></i></button>
                 
-                <button id="global_map" type="button" onclick="window.location.href='{{ url_for('home.global_map', travel_id=travel.id) }}'" class="btn btn-primary me-3"><i class="bi bi-map"></i></button>
+                    <!-- <button id="global_map" type="button" onclick="window.location.href='{{ url_for('home.global_map', travel_id=travel.id) }}'" class="btn btn-primary me-3"><i class="bi bi-map"></i></button> -->
 
                     <form class="d-flex input-group w-auto">
                         <input
@@ -56,15 +80,58 @@
                         >
                           Search
                         </button>
-                      </form>
+                    </form>
                 {% endif %}
 
-                <button id="logout" type="button" onclick="window.location.href='{{ url_for('user.logout') }}'" class="btn btn-link px-3 me-2">Logout</button>
+                <!-- <button id="logout" type="button" onclick="window.location.href='{{ url_for('user.logout') }}'" class="btn btn-link px-3 me-2">Logout</button> -->
 
         </div>
 
     </div>    
 </nav>
+
+<div class="modal fade" id="uploadFileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">Upload file</h5>
+        </div>
+        <div class="modal-body">
+            <label class="form-label" for="customFile">You can upload video and images</label>
+            <p>
+                <ul class=flashes>
+                    <li id="info-text"></li>
+                    <li id="info-text-socket"></li>
+                </ul>
+                <!-- {% with messages = get_flashed_messages() %}
+                  {% if messages %}
+                    <ul class=flashes>
+                    {% for message in messages %}
+                      <li>{{ message }}</li>
+                    {% endfor %}
+                    </ul>
+                  {% endif %}
+                {% endwith %} -->
+            </p>
+            <form method="post" id="file_form" enctype="multipart/form-data">
+                <input id="file-input" name="files[]" type="file" class="form-control"  multiple>
+                <button id="travel_id" style="display: none" value="{{ travel.id }}"> </button>
+                <!-- <button id="upload-button" type="submit" value="Submit" class="btn btn-primary">Go ahead</button> -->
+            </form>
+            <div class="container mx-auto">
+                <!-- <a id="info-text"> </a>
+                <a id="info-text-socket"> </a> -->
+                <progress id="progress-bar"></progress>
+            </div>
+            
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>     
+          <button id="upload-button" type="button" class="btn btn-primary">Go ahead</button>  
+        </div>
+      </div>
+    </div>
+</div>
 
 <div id="dinamic-modal-body">
 
@@ -81,18 +148,20 @@
                             <div class="card h-100">
                                    
                                 <div class="card-body">
-                                    <a href="/video/{{ post.id }}"> <img class="camera-view-responsive card-img-top" src="/static/thumbnails/{{ post.thumbnail_url }}"></img></a>
+                                    <a href="/file/{{ post.id }}"> <img class="camera-view-responsive card-img-top" src="{{ post.file_thumbnail_path }}"></img></a>
                                  
-                                    <h5 class="card-title" href="/video/{{ post.id }}"> {{ post.name }} </h5>
+                                    <h5 class="card-title" href="/file/{{ post.id }}"> {{ post.name }} </h5>
                                     
                                     <div class="row mb-2">
                                         <div class="col">
                                             <i class="card-text pull-right bi bi-geo-alt"></i><span> {{ post.address }}</span>
                                         </div>
-
-                                        <div class="col">
-                                            <i class="card-text pull-right bi bi-stopwatch"></i><span> {{ post.time_duration }}</span>
-                                        </div>
+                                        
+                                        {% if not post.is_image %}     
+                                            <div class="col">
+                                                <i class="card-text pull-right bi bi-stopwatch"></i><span> {{ post.time_duration }}</span>
+                                            </div>
+                                        {% endif %}
                                     </div>
                                     
                                     <i class="card-text pull-right bi bi-calendar4-event"></i><span> {{ post.created_date }}</span>
@@ -101,7 +170,7 @@
                                     <div class="card-footer text-center bg-transparent border-light" role="group" aria-label="Basic example">
                                         <button id="download_video" type="button" onclick="window.location.href='/uploads/{{ post.id }}.mp4'" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-file-arrow-down-fill"></i></button>
                                         <button id="share_video" type="button"  onclick="shareVideo({{ post.id }})" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-share"></i></button>
-                                        <button id="delete_video" type="button"  onclick="window.location.href='/delete_video/{{ post.id }}'" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-trash"></i></button>
+                                        <button id="delete_file" type="button"  onclick="window.location.href='{{ url_for('files.delete_file', file_id=post.id) }}'" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-trash"></i></button>
                                     </div>
                                 </div>
                             </div>    
@@ -134,10 +203,16 @@
     </div>
 </div>
 
-<div class="top">
-    <div class="recorder" id="recorder" align="center">
-        <script type="text/javascript" src="/static/js/download_handling.js"></script>
-    </div>
+<div id="context-menu">
+    {% with travel=travel %}
+        {% include "travel_context_menu.html" %}
+    {% endwith %}
+</div>
+
+<div class="btn-group">
+    <a onclick="topFunction()" class="btn btn-primary btn-fab" id="go_up_button">
+      <i class="bi bi-arrow-up-short lg-icon-fab"></i>
+    </a>
 </div>
 
 </body>
